--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,7 @@
+[user]
+	name = Christian Bloch
+	email = christianbloch@gmail.com
+
 [alias]
 	# View the SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph
